--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <h1>Ramsu Idle</h1>
   <p id = 'ramsu'>Ramsus: </p>
   <p id = 'ramsuFamily'>Ramsu Families: </p>
-  <button onclick = 'spawnARamsu()'>Spawn A Ramsu</button>
-  <button id = 'ramsuFamily2', onclick = 'spawnRamsuFamily()'>Spawn Ramsu Family</button>
+  <button onclick = 'spawnRamsus(1)'>Spawn A Ramsu</button>
+  <button id = 'ramsuFamily2' onclick = 'spawnRamsuFamily()'>Spawn Ramsu Family</button>
   <script src="script.js"></script>
 </body>
 
