Created ramsu rooms and ramsu farms

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
   <h1>Ramsu Idle</h1>
   <p id = 'ramsu'>Ramsus: </p>
   <p id = 'ramsuFamily'>Ramsu Families: </p>
-  <button onclick = 'spawnRamsus(1)'>Spawn A Ramsu</button>
+  <p id = 'ramsuRoom'>Ramsu Rooms: </p>
+  <p id = 'ramsuFarm'>Ramsu Farms: </p>
+  <button id = 'ramsu2' onclick = 'spawnRamsus(1)'>Spawn A Ramsu</button>
   <button id = 'ramsuFamily2' onclick = 'spawnRamsuFamily()'>Spawn Ramsu Family</button>
+  <button id = 'ramsuRoom2' onclick = 'spawnRamsuRoom()'>Spawn Ramsu Room</button>
+  <button id = 'ramsuFarm2' onclick = 'spawnRamsuFarm()'>Spawn Ramsu Farm</button>
   <script src="script.js"></script>
 </body>
 
